-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 7
-
Component/s: core-libs
-
b69
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8098741 | emb-9 | Robert Mckenna | P3 | Resolved | Fixed | team |
| JDK-8129172 | 8u65 | Robert Mckenna | P3 | Resolved | Fixed | b02 |
| JDK-8087204 | 8u60 | Robert Mckenna | P3 | Resolved | Fixed | b20 |
| JDK-8138228 | emb-8u65 | Unassigned | P3 | Resolved | Fixed | b02 |
| JDK-8129696 | emb-8u60 | Robert Mckenna | P3 | Resolved | Fixed | b20 |
| JDK-8087287 | 7u91 | Robert Mckenna | P3 | Resolved | Fixed | b01 |
The fix for JDK-7180557 causes a regression for Mac OSX hosts connected to a
VPN (or otherwise with more than network interface associated with the
hostname). The bug affects JDK8u25 and JDK 7u80.
VPN (or otherwise with more than network interface associated with the
hostname). The bug affects JDK8u25 and JDK 7u80.
- backported by
-
JDK-8087204 Inet4AddressImpl regression caused by JDK-7180557
-
- Resolved
-
-
JDK-8087287 Inet4AddressImpl regression caused by JDK-7180557
-
- Resolved
-
-
JDK-8098741 Inet4AddressImpl regression caused by JDK-7180557
-
- Resolved
-
-
JDK-8129172 Inet4AddressImpl regression caused by JDK-7180557
-
- Resolved
-
-
JDK-8129696 Inet4AddressImpl regression caused by JDK-7180557
-
- Resolved
-
-
JDK-8138228 Inet4AddressImpl regression caused by JDK-7180557
-
- Resolved
-
(1 backported by)