8080819: Inet4AddressImpl regression caused by JDK-7180557

Reviewed-by: michaelm